[gd_scene load_steps=12 format=2]

[ext_resource path="res://minigame.gd" type="Script" id=1]
[ext_resource path="res://space_time/spacetime-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://frigideira.png" type="Texture" id=3]
[ext_resource path="res://plantinha.png" type="Texture" id=4]
[ext_resource path="res://sofazinho.png" type="Texture" id=5]
[ext_resource path="res://caminha.png" type="Texture" id=6]
[ext_resource path="res://space_time/Parabéns, você conseguiu!! (1).png" type="Texture" id=7]
[ext_resource path="res://space_time/voce perdeu.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1028.0
margin_bottom = 607.0
color = Color( 1, 0.615686, 0.615686, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 22.0
margin_top = 9.0
margin_right = 134.0
margin_bottom = 42.0

[node name="Button5" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -8.0
margin_top = 8.0
margin_right = 277.0
margin_bottom = 59.0
rect_scale = Vector2( 0.601077, 0.601077 )
custom_fonts/font = SubResource( 2 )
text = "voltar"
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 192.0
color = Color( 1, 0.992157, 0.521569, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 96.0
margin_top = 64.0
margin_right = 1760.0
margin_bottom = 188.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECIONE AS CARTAS NA SEQUÊENCIA CORRETA:"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 96.0
margin_top = 144.0
margin_right = 1760.0
margin_bottom = 268.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "VASO - CAMA - SOFÁA - FRIGIDEIRA"
align = 1

[node name="Button2" type="Button" parent="."]
margin_left = 360.0
margin_top = 280.0
margin_right = 464.0
margin_bottom = 438.0

[node name="cama" type="Sprite" parent="Button2"]
position = Vector2( -263.016, -87.9667 )
scale = Vector2( 0.0981771, 0.0981771 )
texture = ExtResource( 6 )
offset = Vector2( 3159.47, 1570.5 )

[node name="Button" type="Button" parent="."]
margin_left = 768.0
margin_top = 272.0
margin_right = 888.0
margin_bottom = 438.0

[node name="plantinha" type="Sprite" parent="Button"]
position = Vector2( 55.97, 71.9688 )
scale = Vector2( 0.0966667, 0.0979167 )
texture = ExtResource( 4 )

[node name="Button4" type="Button" parent="."]
margin_left = 136.0
margin_top = 264.0
margin_right = 264.0
margin_bottom = 432.0

[node name="frigideira" type="Sprite" parent="Button4"]
position = Vector2( 64, 80 )
scale = Vector2( 0.0991667, 0.0979167 )
texture = ExtResource( 3 )

[node name="Button3" type="Button" parent="."]
margin_left = 560.0
margin_top = 264.0
margin_right = 680.0
margin_bottom = 440.0

[node name="sofa" type="Sprite" parent="Button3"]
position = Vector2( 56.0001, 80.0001 )
scale = Vector2( 0.0966667, 0.0966667 )
texture = ExtResource( 5 )

[node name="Parabéns,VocêConseguiu!!(1)" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 1.39798, 1.39798 )
texture = ExtResource( 7 )

[node name="Button9" type="Button" parent="Parabéns,VocêConseguiu!!(1)"]
margin_left = -57.2253
margin_top = 34.3352
margin_right = 51.7747
margin_bottom = 68.3352
text = "Fechar"

[node name="VocePerdeu" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 1.39798, 1.39798 )
texture = ExtResource( 8 )

[node name="Button8" type="Button" parent="VocePerdeu"]
margin_left = -65.146
margin_top = 40.0
margin_right = 54.854
margin_bottom = 75.0
text = "Recomeçar"

[node name="Label3" type="Label" parent="."]
margin_left = 848.0
margin_top = 528.0
margin_right = 992.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 3 )

[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Parabéns,VocêConseguiu!!(1)/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="VocePerdeu/Button8" to="." method="_on_Button8_pressed"]
